# podsave

./: .gitignore  AGENTS.md  LICENSE  README.md  podsave  pyproject.toml
docs/plans/: 2026-04-23-podsave-v1.md  2026-04-25-polish-papercuts.md  2026-04-25-v1.2-focused-extraction.md  2026-04-26-v2.0-vault-search.md
docs/project/: ROADMAP.md  SPEC.md
docs/system/: ARCHITECTURE.md  FEATURES.md
src/: cli.py  errors.py  models.py
src/pipeline/: download.py  extract.py  render.py  transcribe.py
src/pipeline/prompts/: extract_v1.md  extract_v2.md
src/search/: callout.py  filters.py  index.py  matcher.py  ranker.py  render.py
src/storage/: config.py  log.py  paths.py  queue.py  transcripts.py
src/utils/: cost.py  filenames.py  youtube.py
tests/: conftest.py  test_cli_doctor.py  test_cli_drain_retry.py  test_cli_focus.py  test_cli_queue_mgmt.py  test_cli_search.py  test_cli_smoke.py  test_cli_stats.py  test_pipeline_download.py  test_pipeline_extract.py  test_pipeline_render.py  test_pipeline_transcribe.py  test_search_filters.py  test_search_index.py  test_search_matcher.py  test_search_ranker.py  test_search_render.py  test_storage_config.py  test_storage_log.py  test_storage_queue.py  test_storage_transcripts.py  test_utils_cost.py  test_utils_filenames.py  test_utils_youtube.py
